# AgentSphere

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Makefile  PHASE1_REPORT.md  PHASE2_REPORT.md  PHASE3_IMPLEMENTATION_PLAN.md  PHASE3_REPORT.md  PHASE4_IMPLEMENTATION_PLAN.md  PHASE4_REPORT.md  PHASE5_5_IMPLEMENTATION_PLAN.md  PHASE5_5_REPORT.md  PHASE5_IMPLEMENTATION_PLAN.md  PHASE5_REPAIR_REPORT.md  PHASE5_REPORT.md  README.md  VALIDATION.md  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile.api  docker-compose.yml
docs/: INDEX.md
docs/architecture/: ADR-033-ai-gateway.md  ADR-034-provider-registry.md  ADR-035-prompt-manager.md  ADR-036-streaming-architecture.md  ADR-037-circuit-breaker.md  ADR-038-retry-policy.md  ADR-039-token-accounting.md  ADR-040-model-registry.md  ADR-041-agent-runtime.md  ADR-042-execution-engine.md  ADR-043-runtime-state-machine.md  ADR-044-tool-framework.md  ADR-045-conversation-manager.md  ADR-046-runtime-policies.md  ADR-047-runtime-events.md  ADR-048-memory-foundation.md  ADR-049-conversation-engine.md  ADR-050-knowledge-platform.md  ADR-051-chunking-strategy.md  ADR-052-retrieval-architecture.md  ADR-053-langgraph-integration.md  ADR-054-conversation-policies.md  ADR-055-summarization.md  ADR-056-source-attribution.md  ADR-057-operations-platform.md  ADR-058-prompt-studio.md  ADR-059-replay-ui.md  ADR-060-frontend-architecture.md  ADR-061-dashboard.md  ADR-062-playground.md  glossary.md
docs/roadmap/: phase-1-plan.md  phase-1.md  phase-10.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md  phase-7.md  phase-8.md  phase-9.md
scripts/: dev.sh  lint.sh  migrate.sh  seed.sh  test.sh
src/agentsphere/: __main__.py
src/agentsphere/ai/: __init__.py
src/agentsphere/common/: exceptions.py  models.py  request_context.py  uuid7.py
src/agentsphere/config/: database.py  logging.py  redis.py  settings.py
src/agentsphere/interfaces/: container.py
src/agentsphere/runtime/: __init__.py
src/agentsphere/scripts/: generate_types.py  seed.py
tests/: conftest.py
tests/architecture/: test_clean_architecture.py
tests/fixtures/: api_keys.py  tenants.py  users.py
tests/integration/: test_auth.py  test_health.py  test_tenants.py
tests/unit/adapters/: test_langgraph_adapter.py
web/: package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/: ErrorBoundary.tsx  Sidebar.tsx  ThemeProvider.tsx
web/hooks/: useKeyboardShortcuts.ts
web/services/: realtime-service.ts
web/stores/: command-palette-store.ts  notification-store.ts
web/types/: api.ts  models.ts  schemas.ts
(+229 files in other folders)
