[project]
name = "agentsphere"
version = "0.1.0"
description = "Enterprise-grade multi-tenant conversational AI platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "redis[hiredis]>=5.0.0",
    "pyjwt>=2.8.0",
    "argon2-cffi>=23.1.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pydantic-extra-types>=2.6.0",
    "structlog>=24.1.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.45b0",
    "prometheus-client>=0.20.0",
    "dependency-injector>=4.41.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "fakeredis[lua]>=2.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pip-audit>=2.7.0",
    "bandit>=1.7.0",
    "pre-commit>=3.7.0",
    "types-python-jose",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "PT", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
strict = true
python_version = "3.12"
warn_unused_configs = true
disallow_any_unimported = false
ignore_missing_imports = true
exclude = ["tests/", "migrations/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "needs_db: Tests that require a running PostgreSQL database",
    "architecture: Tests enforcing Clean Architecture dependency rules",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
fail_under = 60
show_missing = true
exclude_also = [
    "if TYPE_CHECKING:",
    "def __repr__",
    "def __str__",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]

[tool.hatch.build.targets.wheel]
packages = ["src/agentsphere"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
    "bandit>=1.9.4",
    "fakeredis>=2.36.2",
    "httpx>=0.28.1",
    "mypy>=2.2.0",
    "pip-audit>=2.10.1",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.20",
    "types-python-jose>=3.5.0.20260408",
]
